Fixed bug with backface-visibility: hidden in firefox, optimized flip logic

--- a/source/style/modules/authorization.scss
+++ b/source/style/modules/authorization.scss
@@ -9,7 +9,7 @@
   color: $snowWhite;
   border: 1px solid $snowWhite;
   border-radius: $borderRadius;
-  transition: all .75s;
+  transition: all $flipAnimationDuration;
   &_hidden {
     opacity: 0;
     cursor: default;
